--- a/Desktop/index.html
+++ b/Desktop/index.html
@@ -14,7 +14,7 @@
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">        
             <ul class="navbar-nav">
               
-              <li class="nav-item">
+              <li class="nav-items">
                 <a class="nav-link" href="#">Homepage</a>
               </li>
 
@@ -42,13 +42,17 @@
       <div class='section1'>
         <div class="container">
           <div class="row">
-            <div class="img-wrap">
-              <img src="IMG/0.jpg" class="img-responsive" alt="website template image">
+            
+
+            <!-- <div class="img-wrap">
+              <img src="IMG/0.jpg" class="img-responsive" alt="website template image"> -->
 
               <div class="col-sm-12 text-center">
                 <div class="header-content">
-                  <h1>CONQUER</h1>
-                  <h4>Simple Bootstrap Template</h4>
+                  <div class="test">
+                    <h1>CONQUER</h1>
+                    <h4>Simple Bootstrap Template</h4>
+                  </div>
 
                 </div>
               </div>
