contact-section + footer-area

--- a/Desktop/index.html
+++ b/Desktop/index.html
@@ -207,7 +207,48 @@
                   <a href="https://www.free-css.com/free-css-templates" class="content-link">Read More</a>
 
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="contact-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 text-center inner">
+              <div class="contact-content">
+                <h1>Contact form</h1>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <p>Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+                      <br>
+                      felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+                      <br>  
+                      Etiam a mi quis arcu varius condimentum.
+
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="contact-form">
+                <div class="col-sm-6 contact-form-left">
+                  <div class="form-group">
+                    <input name="name" type="text" class="form-control" id="name" placeholder="Name">
+                    <input type="email" name="email" class="form-control" id="mail" placeholder="Email">
+                    <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject">
+                  </div>
+                </div>
+                <div class="col-sm-6 contact-form-right">
+                  <div class="form-group">
+                    <textarea name="message" rows="6" class="form-control" id="comment" placeholder="Your message here..."></textarea>
+                    <button type="submit" class="btn btn-default">Send</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -215,9 +256,27 @@
         </div>
       </div>
 
-
-
-
+    <div class="footer-area">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-sm-12">
+            <div class="footer-content">
+              <h1>Use it free!</h1>
+              <p>“Conquer is free Bootstrap template from TemplateMo website.<br>
+                No backlink is required to use this layout.”</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <p class="copy">Copyright © 2045 Your Company Name | Design: TemplateMo</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     </body>
     
