--- a/Desktop/index.html
+++ b/Desktop/index.html
@@ -10,7 +10,7 @@
 
       <!-- NAVBAR -->
 
-      <div class="container d-flex p-2">
+      <div class="container d-flex p-3">
         <nav class="navbar navbar-expand-lg navbar-light bg-light mx-auto border">
           <div class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
@@ -91,9 +91,9 @@
 
       <!-- две колонки -->
 
-      <div class="container">
+      <div class="container p-3">
         <div class="row">
-          <div class="col">
+          <div class="col-md-6">
             <div class="card bg-light">
               <div class="card-body">
                 <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/2-1.jpg" alt="Card image cap">
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          <div class="col">
+          <div class="col-md-6">
             <div class="card bg-light ">
               <div class="card-body">
                 <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/2-2.jpg" alt="Card image cap">
@@ -140,9 +140,9 @@
 
       <!-- четыре колонки -->
 
-      <div class="container">
+      <div class="container p-3">
         <div class="row">
-          <div class="col-3">
+          <div class="col-md-3">
             <div class="card bg-light">
               <div class="card-body">
                 <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/4-1.jpg" alt="Card image cap">
@@ -154,7 +154,7 @@
             </div>
           </div>
 
-          <div class="col-3">
+          <div class="col-md-3">
             <div class="card bg-light">
               <div class="card-body">
                 <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/4-2.jpg" alt="Card image cap">
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <div class="col-3">
+          <div class="col-md-3">
             <div class="card bg-light">
               <div class="card-body">
                 <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/4-3.jpg" alt="Card image cap">
@@ -179,7 +179,7 @@
             </div>
           </div>
 
-          <div class="col-3">
+          <div class="col-md-3">
             <div class="card bg-light">
               <div class="card-body">
                 <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/4-4.jpg" alt="Card image cap">
@@ -197,7 +197,7 @@
       <!-- одна большая колонка -->
 
       <div class="container"> 
-          <div class="card bg-light">
+          <div class="card bg-light p-3">
             <div class="card-body">
               <img class="card-img-top" src="https://www.free-css.com/assets/files/free-css-templates/preview/page196/conquer/assets/img/4-5.jpg" alt="Card image cap">
               <h5 class="card-title text-secondary">One Big Column</h5>
