--- a/Desktop/index.html
+++ b/Desktop/index.html
@@ -41,7 +41,7 @@
 
       <!-- jumbotron -->
     
-      <div class="container">
+      <div class="container p-3">
         <div class="jumbotron d-flex justify-content-center">
           <div class=" my_costil"> 
             <h1 class="display-4">CONQUER</h1>
@@ -52,7 +52,7 @@
 
       <!-- три колонки -->
 
-      <div class="container">
+      <div class="container p-3">
         <div class="row">
           <div class="col-sm">
             <div class="card bg-light" style="width: 22rem;">
@@ -124,7 +124,7 @@
       
       <!-- jumbotron2 -->
 
-      <div class="container">
+      <div class="container p-3">
         <div class="jumbotron d-flex justify-content-center">
           <div class=" my_costil"> 
             <h1 class="display-4">Our Services</h1>
@@ -196,7 +196,7 @@
 
       <!-- одна большая колонка -->
 
-      <div class="container"> 
+      <div class="container p-3"> 
         <div class="row">
           <div class="col">
             <div class="card bg-light p-3">
