--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -46,13 +46,9 @@
     <script>
       const TaskListContainer = document.getElementById("TaskListContainer");
       let TaskItems = [];
-      let box1 = [];
-      box1 = localStorage.getItem("items");
-      let box2 = JSON.parse(box1);
-      box2.forEach((el, ii) => {
-        if (el) {
-          TaskItems.push(box2[ii]);
-        }
+      let localItems = JSON.parse(localStorage.getItem("items"));
+      localItems.forEach((localItem, i) => {
+        TaskItems.push(localItems[i]);
       });
       document.addEventListener("DOMContentLoaded", renderList());
 
@@ -75,8 +71,8 @@
 
                         <button class="waves-effect waves-light btn-small blue darken-1"
                         type="submit" name="action"
-                        onclick='edditTask(${i})'>
-                            <i class="material-icons" id= " ">border_color</i>
+                        onclick='openTaskEditor(${i})'>
+                            <i class="material-icons">border_color</i>
                         </button>
 
                         <button
@@ -102,8 +98,7 @@
           };
 
           TaskItems.push(task);
-          let TaskItems_JSON = JSON.stringify(TaskItems);
-          localStorage.setItem("items", TaskItems_JSON);
+          saveTasksLocal(TaskItems);
           document.getElementById("TaskImput").value = "";
           renderList();
         } else {
@@ -117,26 +112,25 @@
       });
       function delTask(i) {
         TaskItems.splice(i, 1);
-        let TaskItems_JSON = JSON.stringify(TaskItems);
-        localStorage.setItem("items", TaskItems_JSON);
+        saveTasksLocal(TaskItems);
         renderList();
         return;
       }
-      function edditTask(i) {
+      function openTaskEditor(i) {
         let container_sayver = TaskListContainer.innerHTML;
         let old_task_text = TaskItems[i].text;
         TaskListContainer.innerHTML = `
         <div class="row">
           <div class="input-field col s9">
-            <input value="${old_task_text}" id="EdditTaskImput" type="text" class="validate" />
+            <input value="${old_task_text}" id="EdditTaskField" type="text" class="validate" />
             <label class="active" for="first_name2">редактировать запись</label>
           </div>
 
           <div class="input-field col s3">
             <a
               class="btn-floating btn-large waves-effect waves-light deep-purple lighten-3"
-              onclick="task_after_eddit(${i})"
-              id="addButton"
+              onclick="editTask(${i})"
+              id="editButton"
               ><i class="material-icons">add</i></a
             >
           </div>
@@ -147,20 +141,21 @@
         return;
       }
 
-      function task_after_eddit(i) {
-        const text = document.getElementById("EdditTaskImput").value;
-        TaskItems[i].text = text;
-        let TaskItems_JSON = JSON.stringify(TaskItems);
-        localStorage.setItem("items", TaskItems_JSON);
+      function editTask(i) {
+        TaskItems[i].text = document.getElementById("EdditTaskField").value;
+        saveTasksLocal(TaskItems);
         renderList();
       }
       function strikeTask(i) {
         let bul = !TaskItems[i].isComplete;
         TaskItems[i].isComplete = bul;
-        let TaskItems_JSON = JSON.stringify(TaskItems);
-        localStorage.setItem("items", TaskItems_JSON);
+        saveTasksLocal(TaskItems);
         renderList();
         return;
+      }
+
+      function saveTasksLocal(TaskItems) {
+        localStorage.setItem("items", JSON.stringify(TaskItems));
       }
     </script>
   </body>
